--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ $(document).ready(function(){
 		<h1 class="dropmobil" style="color:#004953"> Les initiatives que nous avons retenues </h1>
 		
 		<div id="mainBubble" class="container" style="width:100%;">
-		<svg class="mainBubbleSVG" width="1250" height="1200"><text id="bubbleItemNote" x="10" y="400" font-size="18" dominant-baseline="middle" alignment-baseline="middle" style="fill: black;"></text></svg></div>
+		<svg class="mainBubbleSVG" width="1250" height="1200"><text id="bubbleItemNote" x="10" y="420" font-size="18" dominant-baseline="middle" alignment-baseline="middle" style="fill: black;"></text></svg></div>
 			<script script type="text/javascript"> 
 			   var w = window.innerWidth * 0.9 * 0.95;
    var h = Math.ceil(w * 0.7);
@@ -638,11 +638,11 @@ $(document).ready(function(){
        }, {
          "name": "Cinéma",
          "address": "http://www.fondation-jeromeseydoux-pathe.com/Actu%20Immigrants ", 
-         "note":"Sélection de films par la Fondation Pathé-Seydoux autour de l'Immigration, jusqu'au 28 mars 2017. "
+         "note":"Sélection de films par la Fondation Pathé-Seydoux autour de l'Immigration. "
        }, {
          "name": "Running",
          "address": "http://refugeesong.com/ ", 
-         "note":"La chanson Running de Andrea Pizziconi composée pour la Journée mondiale des réfugiés en 2016. "
+         "note":"La chanson Running d'Andrea Pizziconi, composée pour la Journée mondiale des réfugiés en 2016. "
        },{
          "name": "Sur ma route",
          "address": "https://www.youtube.com/watch?v=Psr2nMh_ve0", 
