--- a/index.html
+++ b/index.html
@@ -997,14 +997,15 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 							<p> Ce projet a été réalisé pour notre cours de visualisation de données à l'ENSAE.</p>
 							<p> Nous souhaitons utiliser nos compétences d'économistes statisticiens pour nous engager et mettre en lumière une situation complexe et cruciale de notre époque.</p>
 							<h3>Pour en savoir plus  </h3>
-							<p> Certains travaux en sociologie, et notamment l'article de
-	Katy Long <a href="https://academic.oup.com/migration/article/1/1/4/940995/When-refugees-stopped-being-migrants-Movement">
-	"When refugees stopped being migrants" (2013)</a>, montrent que l'apparition d'un statut à part de réfugié empêche
+							<p> Sur les limites du statut de réfugié : l'article de sociologie de 
+								Katy Long <a href="https://academic.oup.com/migration/article/1/1/4/940995/When-refugees-stopped-being-migrants-Movement">
+	"When refugees stopped being migrants" (2013)</a>, montre que l'apparition d'un statut à part de réfugié empêche
 	une intégration économique durable, qui mobilise d'autres moyens que l'assistance humanitaire.</p>
 							<p>Combien de migrants ? Un focus sur la terminologie employée pour décrire les flux migratoires 
 							(vocabulaire différencié selon la position dans les champs médiatique, politique, institutionnel ou associatif des acteurs), 
 							la production des chiffres et l’usage qui en est fait par les médias et les organisations internationales.  </p>
-							
+							<p> Sur les déplacés internes, <a href="https://www.internal-displacement.org/globalreport2016/">
+	"When refugees stopped being migrants" (2013)</a> l’Observatoire des situations de déplacement interne (IDMC)</p> 
 						</section>
 						<section class="4u$ 12u$(medium) 12u$(small)">
 							<h3>Qui sommes-nous ?</h3> 	 
