--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 							<p>Sur la terminologie employée pour décrire les flux migratoires 			
 							la production des chiffres et l’usage qui en est fait par les médias et les organisations internationales. "Combien de migrants?" </p>
 							<p> Sur les déplacés internes : le rapport mondial 2016 de <a href="https://www.internal-displacement.org/globalreport2016/">
-	"When refugees stopped being migrants" (2013)</a> l’Observatoire des situations de déplacement interne (IDMC)</p> 
+	l’Observatoire des situations de déplacement interne (IDMC)</a> </p> 
 						</section>
 						<section class="4u$ 12u$(medium) 12u$(small)">
 							<h3>Qui sommes-nous ?</h3> 	 
