--- a/index.html
+++ b/index.html
@@ -1001,8 +1001,8 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 								Katy Long <a href="https://academic.oup.com/migration/article/1/1/4/940995/When-refugees-stopped-being-migrants-Movement">
 	"When refugees stopped being migrants" (2013)</a>, montre que l'apparition d'un statut à part de réfugié empêche
 	une intégration économique durable, qui mobilise d'autres moyens que l'assistance humanitaire.</p>
-							<p>Sur la terminologie employée pour décrire les flux migratoires 			
-							la production des chiffres et l’usage qui en est fait par les médias et les organisations internationales. "Combien de migrants?" </p>
+							<p>Sur la terminologie employée pour décrire les flux migratoires, la
+								production des chiffres et l’usage qui en est fait par les médias et les organisations internationales. "Combien de migrants?" </p>
 							<p> Sur les déplacés internes : le rapport mondial 2016 de <a href="https://www.internal-displacement.org/globalreport2016/">
 	l’Observatoire des situations de déplacement interne (IDMC)</a> </p> 
 						</section>
