--- a/index.html
+++ b/index.html
@@ -437,7 +437,20 @@ illégaux.
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41;text-align: justify;text-justify: inter-word;"> Emmanuel Macron : à compléter <br> 
+<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41;text-align: justify;text-justify: inter-word;"> 
+En 2016, 227 550 titres de séjour ont été attribués (contre 196 535 en 2010, soit une augmentation de 15,8 %).
+
+Les motifs d’attribution des titres de séjour en 2016 sont:
+<ul>
+<li>familial : 88 010 (contre 83 182 en 2010, soit une augmentation de 5,8 %), dont 48 725 concernent des familles de Français ;</li>
+
+<li>études : 70 250 (contre 65 281 : + 7,6 %) ;</li>
+
+<li>économique : 22 575 (contre 18 280 : + 23,5 %) ;</li>
+
+<li>humanitaire (réfugié, asile territorial ou protection subsidiaire, étranger malade…) : 32 285 (contre 18 220 : + 77,2 %) ;</li>
+
+<li>divers (visiteur, étranger entré mineur, ancien combattant, retraité…) : 14 430 (contre 11 572 : + 24,7 %). </li></ul><br> 
 </div>
 </div>
 	
