--- a/index.html
+++ b/index.html
@@ -438,9 +438,9 @@ illégaux.
 </div>
 
 <div class="devrait1" style="background-color:  transparent; border:3px solid #933d41;text-align: justify;text-justify: inter-word;"> 
-En 2016, 227 550 titres de séjour ont été attribués (contre 196 535 en 2010, soit une augmentation de 15,8 %). Les motifs d’attribution des titres de séjour en 2016 sont :
-	regroupement familial (88 010, dont 48 725 concernent des familles de Français), études (70 250), économique (22 575),
-humanitaire (réfugié, asile territorial ou protection subsidiaire, étranger malade… : 32 285)
+En 2016, 227 550 titres de séjour ont été attribués. Les motifs d’attribution des titres de séjour ont eu la répartition suivante en 2016 :
+le regroupement familial (88 010, dont 48 725 concernent des familles de Français), les études (70 250), économique (22 575),
+raison humanitaire (réfugié, asile territorial ou protection subsidiaire, étranger malade… : 32 285),
 divers (visiteur, étranger entré mineur, ancien combattant, retraité… : 14 430 )<br> 
 </div>
 </div>
