--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ En 2016, 227 550 titres de séjour ont été attribués. Les motifs d’attribut
 	répartition suivante en 2016 :
 le regroupement familial (88 010, dont 48 725 concernent des familles de Français), les études (70 250), raisons économiques (22 575),
 raisons humanitaires (réfugié, asile territorial ou protection subsidiaire, étranger malade… : 32 285),
-divers (visiteur, étranger entré mineur, ancien combattant, retraité… : 14 430 )<br> 
+divers (visiteur, étranger entré mineur, ancien combattant, retraité… : 14 430).<br> 
 </div>
 </div>
 	
