--- a/index.html
+++ b/index.html
@@ -451,13 +451,18 @@ divers (visiteur, étranger entré mineur, ancien combattant, retraité… : 14 
 
 <div class="roundedImage" > 
     <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="hamon.png" alt="" style="border:2px  #d1e231 solid; margin-left:15px;  "/>
-  <div class="element2"> <p class="triangle-right left " style="font-style: italic;">S’il y a 200 000 entrées légales d’immigrés en France par an, il y en a plus de 150 000 qui repartent. Nous avons aujourd’hui un solde migratoire qui doit être entre 50 000 et 70 000 personnes.
+  <div class="element2"> <p class="triangle-right left " style="font-style: italic;">S’il y a 200 000 entrées légales d’immigrés en 
+	  France par an, il y en a plus de 150 000 qui repartent. Nous avons aujourd’hui un solde migratoire qui doit être entre 
+	  50 000 et 70 000 personnes.
 </p> </div>
 
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent;border:3px solid #d1e231;text-align: justify;text-justify: inter-word; "> Le chiffre donné par B. Hamon sur le solde migratoire est en partie exact. Mais, il mélange les arrivées et les départs d'individus français ou non. Si l'on ne s'intéresse qu'aux immigrés, qui étaient au coeur du débat, le solde migratoire en France est en fait de 140 000, soit une différence considérable avec le chiffre avancé par B. Hamon.
+<div class="devrait1" style="background-color:  transparent;border:3px solid #d1e231;text-align: justify;text-justify: inter-word; "> Le chiffre donné par B. Hamon sur le solde
+	migratoire est en partie exact. Mais, il mélange les arrivées et les départs d'individus Français ou non. 
+	Si l'on ne s'intéresse qu'aux immigrés, qui étaient au coeur du débat, le solde migratoire en France est en fait de 140 000, 
+	soit une différence considérable avec le chiffre avancé par B. Hamon.
 </div>
 </div>
 	
