--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 		</div>
  			<h1 style="color:#004953"> Qu'en pensent les candidats à la présidentielle? </h1>
- 	<h2> Focus sur le débat du 20 mars 2017 </h2>
+ 	<h2> "Fact-checking" du débat du 20 mars 2017 </h2>
 		
 
  <div class="compteur" id="compteur" style="position: fixed;margin-left: auto;
