--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ illégaux.
 
 <div class="roundedImage"> 
     <img class="element" width="100" height="100" data-toggle="tooltip" data-placement="left" title="François Fillon" src="fillon.png" alt="" style="border:2px #009688 solid; margin-left:15px; "/>
-	<div class="element2"> <p class="triangle-right left3" style="font-style: italic;">Une partie [des demandeurs d’asile] fuient la guerre en Syrie mais l’immense majorité de ces hommes et femmes fuient la pauvreté et viennent de toutes les régions du monde.
+	<div class="element2"> <p class="triangle-right left3" style="font-style: italic;">Une partie [des demandeurs d’asile] fuit la guerre en Syrie mais l’immense majorité de ces hommes et femmes fuient la pauvreté et viennent de toutes les régions du monde.
 </p> </div>
 
 </div>
