--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 <font color="#24292E">L'éclatement du bloc soviétique et les guerres civiles en ex-Yougoslavie expliquent <br>
 	l'augmentation des demandes d'asile à la France dans les années 1990 et 2000.</font>
 			<!--</div>-->
-			<div class="container" style="width:100%;" >
+			<div class="container">
 
 <div id="asile"></div>
 <!-- <div id="asile" style="min-width: 400px; height: 400px; margin: 0 auto"></div> -->
