--- a/index.html
+++ b/index.html
@@ -431,15 +431,15 @@ illégaux.
 <div class="gen" style="width:100%;">
 
 <div class="roundedImage" > 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Emmanuel Macron" src="macron.png" alt="" style="border:2px #933d41 solid; margin-left:15px;  "/>
-  <div class="element2"> <p class="triangle-right left0" style="font-style: italic;">Chaque année, 200 000 titres de séjours sont délivrés en France.
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Emmanuel Macron" src="macron.png" alt="" style="border:2px  #e48400 solid; margin-left:15px;  "/>
+  <div class="element2"> <p class="triangle-right left2" style="font-style: italic;">Chaque année, environ 200 000 titres de séjours sont délivrés en France.
 
 </p> </div>
 
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41;text-align: justify;text-justify: inter-word;"> 
+<div class="devrait1" style="background-color:  transparent; border:3px solid #e48400;text-align: justify;text-justify: inter-word;"> 
 En 2016, 227 550 titres de séjour ont été attribués. Les motifs d’attribution des titres de séjour ont eu la 
 	répartition suivante en 2016 :
 le regroupement familial (88 010, dont 48 725 concernent des familles de Français), les études (70 250), raisons économiques (22 575),
@@ -473,15 +473,15 @@ divers (visiteur, étranger entré mineur, ancien combattant, retraité… : 14 
 <div class="gen" style="width:100%;">
 
 <div class="roundedImage" > 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="melenchon.png" alt="" style="border:2px  #e48400 solid; margin-left:15px;  "/>
-  <div class="element2"> <p class="triangle-right left2" style="font-style: italic;">L’immigration est un exil forcé.
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="melenchon.png" alt="" style="border:2px #933d41 solid; margin-left:15px;  "/>
+  <div class="element2"> <p class="triangle-right left0" style="font-style: italic;">L’immigration est un exil forcé.
 
 </p> </div>
 
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #e48400;text-align: justify;text-justify: inter-word;"> Jean-Luc Mélenchon : à compléter
+<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41;text-align: justify;text-justify: inter-word;"> Jean-Luc Mélenchon : à compléter
 </div>
 </div>
 	</div>
