--- a/index.html
+++ b/index.html
@@ -176,19 +176,19 @@
 						<section class="4u 12u$(small)" style ="text-justify: inter-word" >
 							<center> <i class="icon big rounded fa fa-bomb"></i> </center>
 							<font color="#24292E">
-							<p style="text-align: justify;text-justify: inter-word; color:#004953;" >Un <b style="font-weight:bold ; color:#0f52ba">réfugié </b> est une personne qui se trouve hors du pays 
+							<p style="text-align: justify;text-justify: inter-word; color:#004953;" >Un <b style="font-weight:bold ; color:#0f52ba">réfugié </b> est une personne qui se trouve <b> hors du pays </b>
 								dont elle a la nationalité ou dans lequel elle a sa résidence habituelle,
 								et qui “du fait de sa race, de sa religion, de sa nationalité, 
 								de son appartenance à un groupe social déterminé 
-								ou de ses opinions politiques craint avec raison d’être persécutée et 
+								ou de ses opinions politiques <b> craint avec raison d’être persécutée </b> et 
 								ne peut se réclamer de la protection de ce pays ou en raison de ladite 
 								crainte ne peut y retourner”. </p>  </font>
 						</section>
 					         <section class="4u 12u$(small)" style ="text-justify: inter-word" >
 							 <center> <i class="icon big rounded fa fa-question"></i> </center>
 					<font color="#24292E">	 
-						<p>Un réfugié est un ancien <b style="font-weight:bold ;color:#009688">demandeur d’asile</b> mais tous les demandeurs d’asile 
-							ne sont pas reconnus réfugiés (en cas de refus, ils sont qualifiés de “<b style="font-weight:bold">déboutés</b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. </p>
+						<p style="text-align: justify;text-justify: inter-word; color:#004953;">Un réfugié est un ancien <b style="font-weight:bold ;color:#009688">demandeur d’asile</b> mais tous les demandeurs d’asile 
+							ne sont pas reconnus réfugiés (en cas de refus, ils sont qualifiés de “<b style="font-weight:bold">déboutés</b>”). En France, le demandeur d’asile n’a <b>pas le droit de travailler </b>, sauf si l’examen de sa demande dépasse une année. </p>
 						</font> </section>
 				<!--	
                         <section class="4u 12u$(small)" style ="text-justify: inter-word">
@@ -199,7 +199,7 @@
 -->
 						<section class="4u$ 12u$(small)" style ="text-justify: inter-word">
 						 <center> <i class="icon big rounded fa fa-child"></i> </center>
-						<font color="#24292E"> 	<p style="text-align: justify;text-justify: inter-word;color:#004953; ">Contrairement aux réfugiés, les <b style="font-weight:bold ; color:#d7837f">déplacés internes</b> n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la protection de leur propre gouvernement, constituant parfois lui-même la cause de leur fuite. </p>
+						<font color="#24292E"> 	<p style="text-align: justify;text-justify: inter-word;color:#004953; ">Contrairement aux réfugiés, les <b style="font-weight:bold ; color:#d7837f">déplacés internes</b> n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la <b> protection de leur propre gouvernement </b>, constituant parfois lui-même la cause de leur fuite. </p>
 						 </font> </section>
 					</div>
 				</div>		
@@ -211,16 +211,17 @@
 	
 <div style="color:#004953;  width: 55%;text-align: justify;text-justify: inter-word;"> <br>
 	A l'issue d'une demande d'asile, quatre issues sont possibles : 
+	<br>
 	
 	<ul>
 		<li> La demande est rejetée. </li>
-		<li> Le statut de <b style="font-weight:bold ; color: #29AB87" > réfugié </b> est reconnu. En France, les réfugiés
-			bénéficient d'une carte de résident valable <b style="font-weight:bold ; color: #29AB87" > dix ans</b>. <br> </li> 
-		<li> Le bénéfice de la <b style="font-weight:bold ; color:  #934c05" >  protection subsidiaire </b> est accordé à toute personne dont la situation ne répond pas à la définition du statut de réfugié mais pour laquelle il existe des motifs sérieux et avérés de croire qu'elle courrait dans son pays un risque réel de subir une atteinte grave. 
-		Les bénéficiaires de la protection subsidiaire se voient délivrer une carte de séjour temporaire d'une durée d'<b style="font-weight:bold ; color: #934c05" >un an renouvelable</b>. </li>
+		<li> Le statut de <b style="font-weight:bold ; color: #29AB87" > réfugié </b> est accordé. En France, les réfugiés
+			bénéficient d'une carte de résident valable <b > dix ans</b>. <br> </li> 
+		<li> Le bénéfice de la <b style="font-weight:bold ; color:  #934c05" >  protection subsidiaire </b> est accordé à toute personne dont la situation ne répond pas à la définition du statut de réfugié mais pour laquelle il existe des motifs sérieux et avérés de croire qu'elle courrait dans son pays un <b>risque réel </b> de subir une <b> atteinte grave </b>. 
+		Les bénéficiaires de la protection subsidiaire se voient délivrer une carte de séjour temporaire d'une durée d'<b>un an renouvelable</b>. </li>
 		
-		<li>Le <b style="font-weight:bold ; color:  #E48400" > statut humanitaire </b> peut également être conféré dans des cas de risque d'atteinte grave ou encore en cas 
-		de maladie mais il dépend de la législation nationale et non du droit de l'Union, contrairement aux deux autres statuts. </li>
+		<li>Le <b style="font-weight:bold ; color:  #E48400" > statut humanitaire </b> peut également être conféré dans des cas de risque d'<b>atteinte grave </b> ou encore en cas 
+			de <b>maladie</b> mais il dépend de la législation nationale et non du droit de l'Union, contrairement aux deux autres statuts. </li>
 	</ul>	
 		
 	<!--	Un demandeur d'asile dont la demande est acceptée n'obtient pas nécessairement le statut de réfugié. Il existe deux autres statuts. <br>
@@ -335,11 +336,11 @@
 			<h2> Les demandeurs d'asile : d'où viennent-ils? </h2>
 <div> <font color="#24292E"> 10 principaux pays d'origine des demandeurs d'asile en France (premières demandes) </font> </div> <br>
 <div class="container" style="display:flex; flex-direction:row;flex-wrap:wrap; justify-content:space-around;">	
-	<div style="display:flex;flex-direction:column;"> <div> En 2014 </div>
+	<div style="display:flex;flex-direction:column;"> <div style="color:black";> En 2014 </div>
 	
 <iframe id="datawrapper-chart-3ODbC" src="//datawrapper.dwcdn.net/3ODbC/4/"  frameborder="0" allowtransparency="true" scrolling="no" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" oallowfullscreen="oallowfullscreen" msallowfullscreen="msallowfullscreen" style="width:150%;"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["3ODbC"]={},window.datawrapper["3ODbC"].embedDeltas={"100":306,"200":306,"300":306,"400":306,"500":306,"600":306,"700":306,"800":306,"900":306,"1000":306},window.datawrapper["3ODbC"].iframe=document.getElementById("datawrapper-chart-3ODbC"),window.datawrapper["3ODbC"].iframe.style.height=window.datawrapper["3ODbC"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["3ODbC"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("3ODbC"==b)window.datawrapper["3ODbC"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
 	</div>
-	<div style="display:flex;flex-direction:column;"> <div> En 2015 </div>
+	<div style="display:flex;flex-direction:column;"> <div style="color:black"; > En 2015 </div>
 		<!-- <iframe id="datawrapper-chart-3ODbC" src="//datawrapper.dwcdn.net/3ODbC/4/" frameborder="0" allowtransparency="true" scrolling="no" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" oallowfullscreen="oallowfullscreen" msallowfullscreen="msallowfullscreen" width="100%" height="306"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["3ODbC"]={},window.datawrapper["3ODbC"].embedDeltas={"100":306,"200":306,"300":306,"400":306,"500":306,"600":306,"700":306,"800":306,"900":306,"1000":306},window.datawrapper["3ODbC"].iframe=document.getElementById("datawrapper-chart-3ODbC"),window.datawrapper["3ODbC"].iframe.style.height=window.datawrapper["3ODbC"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["3ODbC"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("3ODbC"==b)window.datawrapper["3ODbC"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>-->
 <iframe id="datawrapper-chart-sIMjl" src="//datawrapper.dwcdn.net/sIMjl/4/" frameborder="0" allowtransparency="true" scrolling="no" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" oallowfullscreen="oallowfullscreen" msallowfullscreen="msallowfullscreen" style="width:150%;"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["sIMjl"]={},window.datawrapper["sIMjl"].embedDeltas={"100":306,"200":306,"300":306,"400":306,"500":306,"600":306,"700":306,"800":306,"900":306,"1000":306},window.datawrapper["sIMjl"].iframe=document.getElementById("datawrapper-chart-sIMjl"),window.datawrapper["sIMjl"].iframe.style.height=window.datawrapper["sIMjl"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["sIMjl"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("sIMjl"==b)window.datawrapper["sIMjl"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
 	</div> 
