--- a/index.html
+++ b/index.html
@@ -268,8 +268,120 @@
 	<div class="paraxify intermede-4" style="background-position: center center;">
 	</div>
 
+		<section id="pol" class="wrapper style12 align-center">
+		<div style="font-size: 100px;">
+		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
+		</div>
+ 			<h1 style="color:#004953"> Qu'en pensent les candidats à la présidentielle? </h1>
+ 	<h2> "Fact-checking" du débat du 20 mars 2017 </h2>
 		
+					<header>
+					</header>
 
+<div class="container" style="width:100%;">
+<!-- <div class="gen2">
+
+    <img class="element22" width="100" height="100" src="inconnu.jpg" alt="" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px black;"/>
+	<div class="element222" style="z-index: 1;"> <h3 class="triangle-right left0" >  Ce que nos candidats ont dit         
+</h3> 
+</div>
+</div>
+
+-->
+<div class="gen" style="width:100%;">
+
+<div class="roundedImage"> 
+
+    <img class="element" width="100" height="100" data-toggle="tooltip" src="lepen.png" data-placement="left" alt="Marine Le Pen" title="Marine Le Pen" style="border:2px #0f52ba solid; margin-left:15px; "/>
+
+	<div class="element2"> <p class="triangle-right  left4" width="100" style="font-style: italic;">200 000 étrangers légaux entrent chaque année en France depuis 10 ans, et à peu près autant pour les
+
+illégaux.
+
+</p> </div>
+
+
+</div>
+
+<div class="devrait1" style='background-color: transparent;border:3px solid #0f52ba ; text-align: justify;text-justify: inter-word;'> Il est vrai que depuis 2004, 200 000 étrangers entrent légalement en France chaque année. Cependant, du fait des décès et des départs, la population immigrée en France ne croît que de 90 000 personnes par an. De plus, Marine Le Pen ne dit pas que rapportée à la population française, ce chiffre est le plus faible d'Europe. Enfin, il n'existe aucun chiffre fiable sur le nombre d'étrangers en situation irrégulière en France et les seules estimations faites oscillent entre 10 000 et 100 000.
+</div>
+</div>
+
+<div class="gen" style="width:100%;">
+
+<div class="roundedImage"> 
+    <img class="element" width="100" height="100" data-toggle="tooltip" data-placement="left" title="François Fillon" src="fillon.png" alt="" style="border:2px #009688 solid; margin-left:15px; "/>
+	<div class="element2"> <p class="triangle-right left3" style="font-style: italic;">Une partie [des demandeurs d’asile] fuit la guerre en Syrie mais l’immense majorité de ces hommes et femmes fuient la pauvreté et viennent de toutes les régions du monde.
+</p> </div>
+
+</div>
+		
+<div class="devrait1" style="background-color:  transparent; border:3px solid #009688;text-align: justify;text-justify: inter-word;">Une telle affirmation est fausse. En 2015, selon les chiffres d’Eurostat, plus de la moitié des demandeurs d’asile venaient de pays en guerre.
+</div>
+</div>
+		
+<!-- Macron -->
+
+<div class="gen" style="width:100%;">
+
+<div class="roundedImage" > 
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Emmanuel Macron" src="macron.png" alt="" style="border:2px  #e48400 solid; margin-left:15px;  "/>
+  <div class="element2"> <p class="triangle-right left2" style="font-style: italic;">Chaque année, environ 200 000 titres de séjours sont délivrés en France.
+
+</p> </div>
+
+
+</div>
+
+<div class="devrait1" style="background-color:  transparent; border:3px solid #e48400;text-align: justify;text-justify: inter-word;"> 
+En 2016, 227 550 titres de séjour ont été attribués. Les motifs d’attribution des titres de séjour ont eu la 
+	répartition suivante en 2016 :
+le regroupement familial (88 010, dont 48 725 concernent des familles de Français), les études (70 250), raisons économiques (22 575),
+raisons humanitaires (réfugié, asile territorial ou protection subsidiaire, étranger malade… : 32 285),
+divers (visiteur, étranger entré mineur, ancien combattant, retraité… : 14 430).<br> 
+</div>
+</div>
+	
+<!-- Hamon -->
+<div class="gen" style="width:100%;">
+
+<div class="roundedImage" > 
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="hamon.png" alt="" style="border:2px  #d1e231 solid; margin-left:15px;  "/>
+  <div class="element2"> <p class="triangle-right left " style="font-style: italic;">S’il y a 200 000 entrées légales d’immigrés en 
+	  France par an, il y en a plus de 150 000 qui repartent. Nous avons aujourd’hui un solde migratoire qui doit être entre 
+	  50 000 et 70 000 personnes.
+</p> </div>
+
+
+</div>
+
+<div class="devrait1" style="background-color:  transparent;border:3px solid #d1e231;text-align: justify;text-justify: inter-word; "> Le chiffre donné par B. Hamon sur le solde
+	migratoire est en partie exact. Mais, il mélange les arrivées et les départs d'individus Français ou non. 
+	Si l'on ne s'intéresse qu'aux immigrés, qui étaient au coeur du débat, le solde migratoire en France est en fait de 140 000, 
+	soit une différence considérable avec le chiffre avancé par B. Hamon.
+</div>
+</div>
+	
+<!-- Mélenchon -->
+	
+<div class="gen" style="width:100%;">
+
+<div class="roundedImage" > 
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="melenchon.png" alt="" style="border:2px #933d41 solid; margin-left:15px;  "/>
+  <div class="element2"> <p class="triangle-right left0" style="font-style: italic;">L’immigration est un exil forcé.
+
+</p> </div>
+
+
+</div>
+
+<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41;text-align: justify;text-justify: inter-word;"> Jean-Luc Mélenchon : à compléter
+</div>
+</div>
+	</div>
+			</section>
+	
+	
 		<section id="two" class="wrapper style12 align-center">
 			<div style="font-size: 100px;">
 			<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
@@ -378,14 +490,9 @@
 
 		</section>
 		
-	<!-- Quatrième partie Quentin-->	
-		<section id="pol" class="wrapper style12 align-center">
-		<div style="font-size: 100px;">
-		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
-		</div>
- 			<h1 style="color:#004953"> Qu'en pensent les candidats à la présidentielle? </h1>
- 	<h2> "Fact-checking" du débat du 20 mars 2017 </h2>
-		
+
+
+
 
  <div class="compteur" id="compteur" style="position: fixed;margin-left: auto;
     margin-right: auto; bottom: 0; left:0; right:0; width: auto; height:45px; background:rgba(0,0,0,0.5); padding-top:0.4%; padding-bottom:0.5%; padding-left:0%;z-index: 4;">
@@ -403,110 +510,6 @@ counterID=setInterval(counterUpdate, 2500)
 </script>
 
 </div>
-					<header>
-					</header>
-
-<div class="container" style="width:100%;">
-<!-- <div class="gen2">
-
-    <img class="element22" width="100" height="100" src="inconnu.jpg" alt="" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px black;"/>
-	<div class="element222" style="z-index: 1;"> <h3 class="triangle-right left0" >  Ce que nos candidats ont dit         
-</h3> 
-</div>
-</div>
-
--->
-<div class="gen" style="width:100%;">
-
-<div class="roundedImage"> 
-
-    <img class="element" width="100" height="100" data-toggle="tooltip" src="lepen.png" data-placement="left" alt="Marine Le Pen" title="Marine Le Pen" style="border:2px #0f52ba solid; margin-left:15px; "/>
-
-	<div class="element2"> <p class="triangle-right  left4" width="100" style="font-style: italic;">200 000 étrangers légaux entrent chaque année en France depuis 10 ans, et à peu près autant pour les
-
-illégaux.
-
-</p> </div>
-
-
-</div>
-
-<div class="devrait1" style='background-color: transparent;border:3px solid #0f52ba ; text-align: justify;text-justify: inter-word;'> Il est vrai que depuis 2004, 200 000 étrangers entrent légalement en France chaque année. Cependant, du fait des décès et des départs, la population immigrée en France ne croît que de 90 000 personnes par an. De plus, Marine Le Pen ne dit pas que rapportée à la population française, ce chiffre est le plus faible d'Europe. Enfin, il n'existe aucun chiffre fiable sur le nombre d'étrangers en situation irrégulière en France et les seules estimations faites oscillent entre 10 000 et 100 000.
-</div>
-</div>
-
-<div class="gen" style="width:100%;">
-
-<div class="roundedImage"> 
-    <img class="element" width="100" height="100" data-toggle="tooltip" data-placement="left" title="François Fillon" src="fillon.png" alt="" style="border:2px #009688 solid; margin-left:15px; "/>
-	<div class="element2"> <p class="triangle-right left3" style="font-style: italic;">Une partie [des demandeurs d’asile] fuit la guerre en Syrie mais l’immense majorité de ces hommes et femmes fuient la pauvreté et viennent de toutes les régions du monde.
-</p> </div>
-
-</div>
-		
-<div class="devrait1" style="background-color:  transparent; border:3px solid #009688;text-align: justify;text-justify: inter-word;">Une telle affirmation est fausse. En 2015, selon les chiffres d’Eurostat, plus de la moitié des demandeurs d’asile venaient de pays en guerre.
-</div>
-</div>
-		
-<!-- Macron -->
-<div class="gen" style="width:100%;">
-
-<div class="roundedImage" > 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Emmanuel Macron" src="macron.png" alt="" style="border:2px  #e48400 solid; margin-left:15px;  "/>
-  <div class="element2"> <p class="triangle-right left2" style="font-style: italic;">Chaque année, environ 200 000 titres de séjours sont délivrés en France.
-
-</p> </div>
-
-
-</div>
-
-<div class="devrait1" style="background-color:  transparent; border:3px solid #e48400;text-align: justify;text-justify: inter-word;"> 
-En 2016, 227 550 titres de séjour ont été attribués. Les motifs d’attribution des titres de séjour ont eu la 
-	répartition suivante en 2016 :
-le regroupement familial (88 010, dont 48 725 concernent des familles de Français), les études (70 250), raisons économiques (22 575),
-raisons humanitaires (réfugié, asile territorial ou protection subsidiaire, étranger malade… : 32 285),
-divers (visiteur, étranger entré mineur, ancien combattant, retraité… : 14 430).<br> 
-</div>
-</div>
-	
-<!-- Hamon -->
-<div class="gen" style="width:100%;">
-
-<div class="roundedImage" > 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="hamon.png" alt="" style="border:2px  #d1e231 solid; margin-left:15px;  "/>
-  <div class="element2"> <p class="triangle-right left " style="font-style: italic;">S’il y a 200 000 entrées légales d’immigrés en 
-	  France par an, il y en a plus de 150 000 qui repartent. Nous avons aujourd’hui un solde migratoire qui doit être entre 
-	  50 000 et 70 000 personnes.
-</p> </div>
-
-
-</div>
-
-<div class="devrait1" style="background-color:  transparent;border:3px solid #d1e231;text-align: justify;text-justify: inter-word; "> Le chiffre donné par B. Hamon sur le solde
-	migratoire est en partie exact. Mais, il mélange les arrivées et les départs d'individus Français ou non. 
-	Si l'on ne s'intéresse qu'aux immigrés, qui étaient au coeur du débat, le solde migratoire en France est en fait de 140 000, 
-	soit une différence considérable avec le chiffre avancé par B. Hamon.
-</div>
-</div>
-	
-<!-- Mélenchon -->
-	
-<div class="gen" style="width:100%;">
-
-<div class="roundedImage" > 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="melenchon.png" alt="" style="border:2px #933d41 solid; margin-left:15px;  "/>
-  <div class="element2"> <p class="triangle-right left0" style="font-style: italic;">L’immigration est un exil forcé.
-
-</p> </div>
-
-
-</div>
-
-<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41;text-align: justify;text-justify: inter-word;"> Jean-Luc Mélenchon : à compléter
-</div>
-</div>
-	</div>
-			
 <script>
 $(document).ready(function(){
     $('[data-toggle="tooltip"]').tooltip();   
