--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 					<header>
 					</header>
 
-<div class="container" style="width:100%;">
+<div class="container">
 <!-- <div class="gen2">
 
     <img class="element22" width="100" height="100" src="inconnu.jpg" alt="" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px black;"/>
